# kube-node-oos-controller

./: .rustfmt.toml  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml
manifests/: daemonset.yaml  rbac.yaml
src/: main.rs
