[package]
name = "kube-node-oos-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.130" }
serde_json = { version = "1.0.68" }
serde_yaml = { version = "0.9.19" }
thiserror = { version = "1.0.29" }
anyhow = { version = "1.0.71" }
tower = { version = "0.4.13" }
tracing = { version = "0.1.36" }
tracing-subscriber = { version = "0.3.17" }
tokio = { version = "1", features = ["full"] }
kube = { version = "0.90.0", features = ["runtime", "derive", "unstable-client"] }
k8s-openapi = { version = "0.21.1", features = ["latest"] }
futures = { version = "0.3.17", default-features = false }
hyper = { features = ["client", "http1"] }
hyper-util = { features = ["client-legacy", "http1", "tokio"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4.21"
env_logger = "0.11.3"
